# redletters

./: .gitignore  Makefile  README.md  pyproject.toml  sources_catalog.yaml
.bmad/: core-config.yaml
.bmad/agents/: analyst.yaml  architect.yaml  dev.yaml  pm.yaml  po.yaml  qa.yaml
.bmad/checklists/: code-review.md  pre-commit.md
.bmad/data/: bmad-kb.md
.bmad/specs/: SPEC-CONNECTION-RELIABILITY.md
.bmad/tasks/: analyze-data-source.md  create-adr.md  write-tests.md
.bmad/templates/: adr-template.md  user-story.md
.bmad/workflows/: bug-fix.yaml  data-integration.yaml  greenfield-feature.yaml
_bmad-output/: polish-quick-spec.md  polish-sprint-plan.md  release-gate.md  sprint-24-plan.md  sprint-24-spec.md  sprint-25-plan.md  sprint-25-spec.md  sprint-26-plan.md  sprint-26-spec.md  ux-audit.md  ux-changelog.md  ux-quick-spec.md  ux-sprint-plan.md  ux2-quick-spec.md  ux2-sprint-plan.md  ux3-quick-spec.md  ux3-sprint-plan.md  ux4-quick-spec.md  ux4-sprint-plan.md  visual-polish-release-report.md  visual-polish-v2-audit.md  visual-polish-v2-changelog.md  visual-polish-v2-sprint-plan.md
docs/: ADR-001-architecture.md  ADR-002-provenance-first-data-model.md  API.md  BMAD-SPEC.md  EPISTEMIC-CONSTITUTION.md  GOALS.md  PROGRESS.md  REPO-SKELETON-CHECKLIST.md  RUNBOOK-SCHOLARLY-BETA.md  RUNBOOK-SCHOLARLY-TOOL-V03.md  RUNBOOK-SCHOLARLY-TOOL-V04.md  RUNBOOK-SCHOLARLY-TOOL-V05.md  RUNBOOK-SCHOLARLY-TOOL-V07.md  RUNBOOK-SCHOLARLY-TOOL-V09.md  RUNBOOK-SCHOLARLY-TOOL-V10.md  SPRINT-10-MAP.md  SPRINT-10-RECEIPT.md  SPRINT-2-RECEIPT.md  SPRINT-3-RECEIPT.md  SPRINT-4-RECEIPT.md  SPRINT-5-RECEIPT.md  SPRINT-6-RECEIPT.md  SPRINT-7-MAP.md  SPRINT-7-RECEIPT.md  SPRINT-8-MAP.md  SPRINT-8-RECEIPT.md  SPRINT-9-MAP.md  SPRINT-9-RECEIPT.md  TESTING.md  brainstorming-session-results.md  cli.md  concepts.md  gui.md  index.md  sources-and-licensing.md  troubleshooting.md
docs/examples/: claims.sample.json
gui/: index.html  package-lock.json  package.json  playwright-real.config.ts  playwright.config.ts  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs
gui/src-tauri/src/commands/: auth.rs  engine.rs  mod.rs
tests/: __init__.py  test_acknowledgement_gates.py  test_bundle.py  test_claim_enforcement.py  test_claims_analyzer.py  test_claims_taxonomy.py  test_confidence_bucketing.py  test_confidence_scoring.py  test_connection.py  test_consequence_summary.py  test_coverage_summary.py  test_dossier_epistemic.py  test_export_citations.py  test_export_friction.py  test_export_ids.py  test_fetch_provenance.py  test_fluent_translator.py  test_generator.py  test_incentive_tags.py  test_installer_integration.py  test_integration_morphgnt.py  test_loader.py  test_lockfile.py  test_minority_metadata.py  test_parse_code_validation.py  test_passage_mode.py  test_passage_ref.py  test_pipeline_source_pack.py  test_query.py  test_quote_friction.py  test_ranker.py  test_receipts.py  test_schema_contracts.py  test_sense_db.py  test_sense_pack.py  test_sense_pack_provider.py  test_senses_conflicts.py  test_senses_explain.py  test_senses_normalize.py  test_source_pack.py  (+2 more)
(+248 files in other folders)
