[package]
name = "redletters-gui"
version = "0.1.0"
description = "Red Letters Desktop GUI"
authors = ["Red Letters Team"]
edition = "2021"

[lib]
name = "redletters_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
dirs = "5.0"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
